--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,69 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="16dp"
+    android:layout_height="wrap_content"
     android:paddingTop="16dp"
+    android:paddingStart="16dp"
     android:paddingEnd="16dp">
 
     <ImageView
         android:id="@+id/thumbnailImageView"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="16dp"
         android:scaleType="center"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/weatherTextView"
-        android:layout_width="253dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginBottom="12dp"
-        android:hint="날씨"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintStart_toEndOf="@+id/thumbnailImageView" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="379dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="38dp"
-        android:background="@color/gray_ec"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="147dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="253dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginBottom="12dp"
-        android:hint="제목"
+        android:layout_marginStart="16dp"
         android:maxLines="2"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/dateTextView"
-        app:layout_constraintStart_toEndOf="@+id/thumbnailImageView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/thumbnailImageView"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/dateTextView"
-        android:layout_width="253dp"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView"
+        android:layout_marginTop="6dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginBottom="11dp"
-        android:hint="날짜"
-        android:maxLines="2"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/weatherTextView"
-        app:layout_constraintStart_toEndOf="@+id/thumbnailImageView" />
+        app:layout_constraintStart_toStartOf="@id/titleTextView"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        app:layout_constraintStart_toStartOf="@id/titleTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dateTextView"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_marginTop="6dp"
+        android:textColor="@color/black"
+        android:id="@+id/weatherTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/gray_ec"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
