--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".JoinActivity">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="245dp"
+        android:layout_height="301dp"
+        app:srcCompat="@drawable/bf93aa04d739e3f865f81db8f6c6881b"
+        tools:layout_editor_absoluteX="83dp"
+        tools:layout_editor_absoluteY="225dp" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -23,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="200dp"
-        android:backgroundTint="#808080"
+        android:backgroundTint="#A2BAD2"
         android:text="회원가입"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,5 +81,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailtext" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
