--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-
-    <item android:id="@+id/allUser"
+    <item
+        android:id="@+id/allUser"
         android:icon="@drawable/ic_baseline_mood_24"
-        android:title="팔로우"
-        />
+        android:iconTint="#81A2BAD2"
+        android:title="팔로우" />
     <item android:id="@+id/home"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="홈"
