--- a/app/src/main/res/layout/activity_add_article.xml
+++ b/app/src/main/res/layout/activity_add_article.xml
@@ -83,8 +83,10 @@
         android:text="등록하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/thumbnailImageView"
+        app:layout_constraintVertical_bias="0.854" />
 
     <ImageView
         android:id="@+id/thumbnailImageView"
