--- a/app/src/main/res/layout/activity_add_article.xml
+++ b/app/src/main/res/layout/activity_add_article.xml
@@ -85,11 +85,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/thumbnailImageView"
+        app:layout_constraintTop_toBottomOf="@+id/photoImageView"
         app:layout_constraintVertical_bias="0.854" />
 
     <ImageView
-        android:id="@+id/thumbnailImageView"
+        android:id="@+id/photoImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
