--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -9,7 +9,7 @@
     android:paddingEnd="16dp">
 
     <ImageView
-        android:id="@+id/thumbnailImageView"
+        android:id="@+id/photoImageView"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_marginBottom="30dp"
@@ -29,7 +29,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/thumbnailImageView"
+        app:layout_constraintStart_toEndOf="@id/photoImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -77,8 +77,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/thumbnailImageView"
-        app:layout_constraintTop_toBottomOf="@+id/thumbnailImageView" />
+        app:layout_constraintStart_toStartOf="@id/photoImageView"
+        app:layout_constraintTop_toBottomOf="@+id/photoImageView" />
 
     <View
         android:id="@+id/view"
@@ -98,7 +98,7 @@
         android:layout_marginStart="4dp"
         android:backgroundTint="#A2BAD2"
         android:text="follow"
-        app:layout_constraintBottom_toTopOf="@+id/thumbnailImageView"
+        app:layout_constraintBottom_toTopOf="@+id/photoImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
