--- a/app/src/main/res/layout/activity_add_article.xml
+++ b/app/src/main/res/layout/activity_add_article.xml
@@ -88,6 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/photoImageView"
         app:layout_constraintVertical_bias="0.854" />
 
+
     <ImageView
         android:id="@+id/photoImageView"
         android:layout_width="200dp"
@@ -98,7 +99,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.591" />
-
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -112,7 +112,7 @@
         tools:visibility="visible" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/Image5"
         android:layout_width="234dp"
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
